chore: put self-hosting first and write its ladder into TODOS.md
Version 0.3 is what the Bux-written compiler needs, in the order it needs it.
The compiler runs on the JVM; a native binary and the network scope move to 0.4.
A library data structure has the best known asymptotic cost and a textbook implementation.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>